--- a/doc/lispref/Makefile.in
+++ b/doc/lispref/Makefile.in
@@ -30,6 +30,10 @@ texinfodir = $(srcdir)/../misc
 # Directory with emacsver.texi.
 emacsdir =  $(srcdir)/../emacs
 
+INFO_EXT=@INFO_EXT@
+# Options used only when making info output.
+INFO_OPTS=@INFO_OPTS@
+
 MAKEINFO = @MAKEINFO@
 MAKEINFO_OPTS = --force --enable-encoding -I $(emacsdir) -I $(srcdir)
 TEXI2DVI = texi2dvi
@@ -99,16 +103,16 @@ mkinfodir = @test -d ${infodir} || mkdir ${infodir} || test -d ${infodir}
 
 .PHONY: info dvi pdf ps
 
-info: $(infodir)/elisp
+info: $(infodir)/elisp$(INFO_EXT)
 dvi: elisp.dvi
 html: elisp.html
 pdf: elisp.pdf
 ps: elisp.ps
 
 ## Note: "<" is not portable in ordinary make rules.
-$(infodir)/elisp: $(srcs)
+$(infodir)/elisp$(INFO_EXT): $(srcs)
 	$(mkinfodir)
-	$(MAKEINFO) $(MAKEINFO_OPTS) -o $@ $(srcdir)/elisp.texi
+	$(MAKEINFO) $(MAKEINFO_OPTS) $(INFO_OPTS) -o $@ $(srcdir)/elisp.texi
 
 elisp.dvi: $(srcs)
 	$(ENVADD) $(TEXI2DVI) $(srcdir)/elisp.texi
@@ -138,7 +142,7 @@ clean: mostlyclean
 distclean: clean
 
 infoclean:
-	-cd $(infodir) && rm -f elisp elisp-[1-9] elisp-[1-9][0-9]
+	-cd $(infodir) && rm -f elisp$(INFO_EXT) elisp$(INFO_EXT)-[1-9] elisp$(INFO_EXT)-[1-9][0-9]
 
 maintainer-clean: distclean infoclean
 
