--- a/Makefile.in
+++ b/Makefile.in
@@ -129,7 +129,8 @@ man1dir=$(mandir)/man1
 # Where to install and expect the info files describing Emacs.
 infodir=@infodir@
 # Info files not in the doc/misc directory (we get those via make echo-info).
-INFO_NONMISC=emacs eintr elisp
+INFO_EXT=@INFO_EXT@
+INFO_NONMISC=emacs$(INFO_EXT) eintr$(INFO_EXT) elisp$(INFO_EXT)
 
 # If no makeinfo was found and configured --without-makeinfo, "no"; else "yes".
 HAVE_MAKEINFO=@HAVE_MAKEINFO@
@@ -904,6 +905,7 @@ check-info-dir: info
 	  case $${file} in \
 	    *-[0-9]*|COPYING|dir) continue ;; \
 	  esac ; \
+	  file=`echo $${file} | sed 's/\.info//'` ; \
 	  grep -q -F ": ($${file})." dir || missing="$${missing} $${file}" ; \
 	done ; \
 	if test -n "$${missing}"; then \
