--- a/.bzrignore
+++ b/.bzrignore
@@ -55,8 +55,7 @@ doc/**/*.pdf
 !doc/lispintro/cons-*.pdf
 !doc/lispintro/drawers.pdf
 !doc/lispintro/lambda-*.pdf
-info/*
-!info/dir
+info/*.info
 admin/unidata/unidata.txt
 build-aux/compile
 build-aux/config.guess
