* Makefile.in (gnus.dvi): Use $@ instead of $*.dvi.

--- a/doc/misc/Makefile.in
+++ b/doc/misc/Makefile.in
@@ -454,7 +454,7 @@ $(infodir)/gnus: gnus.texi gnus-faq.texi
 gnus.dvi: ${srcdir}/gnus.texi gnus-faq.texi
 	sed -e '/@iflatex/,/@end iflatex/d' ${srcdir}/gnus.texi > gnustmp.texi
 	$(ENVADD) $(TEXI2DVI) gnustmp.texi
-	cp gnustmp.dvi $*.dvi
+	cp gnustmp.dvi $@
 	rm gnustmp.*
 gnus.pdf: ${srcdir}/gnus.texi gnus-faq.texi
 	sed -e '/@iflatex/,/@end iflatex/d' ${srcdir}/gnus.texi > gnustmp.texi
