--- a/Makefile.in
+++ b/Makefile.in
@@ -451,8 +451,6 @@ $(srcdir)/src/stamp-h.in: $(AUTOCONF_INPUTS)
 install: all install-arch-indep install-arch-dep install-leim blessmail
 	@true
 
-MV_DIRS = for i in $$dir; do rm -fr `basename "$$i"` ; mv "$$i" . ; done
-
 ### Install the executables that were compiled specifically for this machine.
 ### It would be nice to do something for a parallel make
 ### to ensure that install-arch-indep finishes before this starts.
@@ -470,7 +468,9 @@ install-arch-dep: mkdir
 	-ln $(DESTDIR)${bindir}/$(EMACSFULL) $(DESTDIR)${bindir}/$(EMACS)
 	if test "${ns_appresdir}" != ""; then \
 	  ( cd ${ns_appresdir} ; \
-	    if test -d share/emacs ; then dir=share/emacs/*/*; $(MV_DIRS); fi;\
+	    if test -d share/emacs ; then \
+	      for dir in share/emacs/${version}/*; do \
+	        rm -fr `basename "$$dir"`; mv "$$dir" . ; done; fi ; \
 	    if test -d share/info ; then rm -fr info; mv share/info . ; fi ; \
 	    rm -fr share ) ; \
 	  ( if cd ${ns_appbindir}/libexec ; then \
